--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -7,6 +7,7 @@
 // Typography
 $open-sans: "Open Sans", sans-serif;
 $montserrat: "Montserrat", sans-serif;
+$base-font-size: 1.8rem;
 
 // Colors
 $mine-shaft: #202020;
