--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -134,7 +134,7 @@ ol {
 }
 
 .copy-content {
-  font-size: 2.4rem;
+  font-size: $base-font-size;
 
   h1,
   h2,
@@ -147,7 +147,7 @@ ol {
   }
 
   p {
-    padding: 1.6rem 0 2rem;
+    padding: 1rem 0;
   }
 
   hr {
