--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -129,8 +129,8 @@ ol {
 }
 
 .page-content {
-  margin-top: 10rem;
-  margin-bottom: 10rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 
 .copy-content {
